Solve the 4th Flex Exercise
Once again, my solution was a little over the top, and took quite a
while. I was able to achieve the desired results, but used too much
properties to do so.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,9 +7,34 @@ img {
   height: 100px;
 }
 
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.contents{
+  display: flex;
+  align-items: center;
+  flex-basis: 200px;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.content{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 52px;
+}
+
+.text{
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
 }
 
 /* do not edit this footer */
